feat(mall): 实现商品浏览统计与热度推荐功能
- 新增商品浏览量统计接口，支持按小时/天/周/月等维度查询- 实现商品浏览记录功能，兼容用户直接查看详情的场景- 引入Redis缓存机制，记录商品浏览次数与时间线数据- 构建商品热度排行榜，综合销量与浏览量计算热度值
- 完善推荐服务，基于热度榜与数据库兜底策略返回商品列表
- 优化浏览历史记录逻辑，确保创建与更新时间准确
- 增强空值校验，防止无效参数导致的数据异常